--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             align-items: center;
             height: 100vh;
             background-image: url('https://raw.githubusercontent.com/EmreCanberk/Accordion/main/gif/elbrus.jpg');
-            background-size: cover; /* Arka planın tamamen dolması */
-            background-position: center; /* Arka planın ortalanması */
-            background-repeat: no-repeat; /* Arka planın tekrar etmemesi */
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
             margin: 0;
             flex-direction: column;
         }
@@ -23,13 +23,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 350px;  /* Kutunun genişliği */
-            height: 350px; /* Kutunun yüksekliği */
+            width: 350px; 
+            height: 350px; 
             margin-bottom: 20px;
-            background-color: white; /* Kutunun içi beyaz */
-            border-radius: 15px; /* Yuvarlak köşeler */
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Hafif gölge */
-            overflow: hidden; /* İçeriğin taşmaması için */
+            background-color: white; 
+            border-radius: 15px; 
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+            overflow: hidden; 
         }
 
         .image-container {
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-    <!-- Kutu içinde görsel ve gif -->
+  
     <div class="box-container">
         <div class="image-container">
             <img id="image" src="https://raw.githubusercontent.com/EmreCanberk/Accordion/main/gif/donuk.jpg" alt="Fotoğraf">
@@ -72,7 +72,7 @@
 
     <button id="cal">Çal</button>
 
-    <audio id="music" src="https://raw.githubusercontent.com/EmreCanberk/Accordion/main/music/akordeon.mp3"></audio>
+    <audio id="music" src="https://raw.githubusercontent.com/EmreCanberk/Accordion/main/music/naze.mp3"></audio>
 
     <script>
         let calButon = document.getElementById("cal");
