--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         #cal {
             margin-top: 20px;
             padding: 20px;
-            background-color: #966f58; 
+            background-color: #979797;  
             color: white;
             border: none;
             border-radius: 50%; 
@@ -58,7 +58,7 @@
         }
 
         #cal:hover {
-            background-color: #db8616;
+            background-color: #868686;
         }
     </style>
 </head>
