--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             flex-direction: column;
         }
 
-  
         .box-container {
             display: flex;
             justify-content: center;
@@ -63,15 +62,16 @@
     </style>
 </head>
 <body>
-  
     <div class="box-container">
         <div class="image-container">
+            
             <img id="image" src="https://raw.githubusercontent.com/EmreCanberk/Accordion/main/donuk.jpg" alt="Fotoğraf">
         </div>
     </div>
 
     <button id="cal">Çal</button>
 
+  
     <audio id="music" src="https://raw.githubusercontent.com/EmreCanberk/Accordion/main/naze.mp3"></audio>
 
     <script>
@@ -82,11 +82,11 @@
         calButon.addEventListener("click", function() {
             if (calButon.textContent === "Çal") {
                 calButon.textContent = "Dur";
-                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/gif/gif.gif";
+                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/main/gif.gif";  <!-- GIF'in doğru raw URL'si -->
                 music.play(); 
             } else {
                 calButon.textContent = "Çal";
-                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/gif/donuk.jpg"; 
+                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/main/donuk.jpg"; 
                 music.pause();
                 music.currentTime = 0; 
             }
@@ -94,3 +94,4 @@
     </script>
 </body>
 </html>
+
