--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         calButon.addEventListener("click", function() {
             if (calButon.textContent === "Çal") {
                 calButon.textContent = "Dur";
-                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/main/gif.gif";  <!-- GIF'in doğru raw URL'si -->
+                image.src = "https://raw.githubusercontent.com/EmreCanberk/Accordion/main/gif.gif"; 
                 music.play(); 
             } else {
                 calButon.textContent = "Çal";
